gcc/testsuite/rust/rustc/ui/issues/issue-7044.rs
static X: isize = 0;
struct X; // { dg-error ".E0428." "" { target *-*-* } }

fn main() {}

